Fix some spacing issues

--- a/public/less/style.less
+++ b/public/less/style.less
@@ -12,7 +12,7 @@ body, html {
 	position: relative;
 }
 main {
-	padding-bottom: 225px;
+	padding-bottom: 250px;
 }
 footer {
 	width: 100%;
